--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch Program",
             "type": "node2",
             "request": "launch",
-            "program": "${workspaceRoot}/question/q4.js",
+            "program": "${workspaceRoot}/server.js",
             "cwd": "${workspaceRoot}"
         },
         {
