--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "Launch Program",
             "type": "node2",
             "request": "launch",
-            "program": "${workspaceRoot}/question/q10.js",
+            "program": "${workspaceRoot}/AJAX/bin/www",
             "cwd": "${workspaceRoot}"
         },
         {
