--- a/AJAX/package.json
+++ b/AJAX/package.json
@@ -12,7 +12,7 @@
     "express-file-autorouter": "^1.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "pug": "^2.0.0-beta11",
+    "pug": "^2.0.0-rc.1",
     "serve-favicon": "~2.3.2"
   }
 }
