--- a/AJAX/package.json
+++ b/AJAX/package.json
@@ -10,9 +10,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express-file-autorouter": "^1.1.0",
-    "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "pug": "^2.0.0-rc.1",
+    "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.3.2"
   }
 }
