[*]修改调试方式

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "Launch Program",
             "type": "node2",
             "request": "launch",
-            "program": "${workspaceRoot}/AJAX/bin/www",
+            "program": "${file}",
             "cwd": "${workspaceRoot}"
         },
         {
